first version of user tracking features